List comprehensive işlemi fonksiyon kullanımı eklendi

--- a/PandasCont.ipynb
+++ b/PandasCont.ipynb
@@ -223,6 +223,52 @@
     },
     {
       "metadata": {
+        "id": "iub1d-IO6elu",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Peki List Comprehensive işlemini fonksiyonlar ile yapalım."
+      ]
+    },
+    {
+      "metadata": {
+        "id": "8fjIUkxc6kHO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        },
+        "outputId": "865aa38c-7824-4173-fdcb-3a59b0e7591b"
+      },
+      "cell_type": "code",
+      "source": [
+        "ortalamaNufus = sehirDf.nufus.mean()\n",
+        "def ortalamaFarkiBul(nufus):\n",
+        "  return ortalamaNufus - nufus\n",
+        "\n",
+        "#yazdığımız fonksiyonu dataframe'e uygulayalım. Yani apply edelim\n",
+        "sehirDf[\"ortalamaFark\"]=sehirDf.nufus.apply(ortalamaFarkiBul)\n",
+        "print(sehirDf)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "      nufus  plakaKodu  sehirler  ortalamaFark\n",
+            "0   3000000          6    Ankara      888000.0\n",
+            "1  15000000         34  İstanbul   -11112000.0\n",
+            "2    300000         18   Çankırı     3588000.0\n",
+            "3    740000         16     Bursa     3148000.0\n",
+            "4    400000         78   Karabük     3488000.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "-_dTzKqIx6cz",
         "colab_type": "text"
       },
